@@ -1,5 +1,5 @@
 /*
- * $Id: dir.c,v 1.29 2003/07/24 19:00:42 chorns Exp $
+ * $Id: dir.c,v 1.30 2003/07/24 20:52:58 chorns Exp $
  *
  * COPYRIGHT:        See COPYING in the top level directory
  * PROJECT:          ReactOS kernel
@@ -13,9 +13,7 @@
 #include <ddk/ntddk.h>
 #include <wchar.h>
 
-#ifndef NDEBUG
 #define NDEBUG
-#endif
 #include <debug.h>
 
 #include "vfat.h"
